<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="query_hint">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
	<string name="search_label">Search</string>
	<string name="image_size">Image Size</string>
	<string name="color_filter">Coler Filter</string>
	<string name="image_type">Image Type</string>
	<string name="site_filter">Site filter</string>
	<string name="advanced_search_options">Advanced search options</string>
	<string name="setting">setting</string>
	<string-array name="image_size_array">
		<item >small</item>
		<item >large</item>
	    <item >medium</item>
		<item >xlarge</item>
		<item />
	</string-array>
	<string-array name="color_filter_array">
		<item >red</item>
	    <item >black</item>
	    <item >brown</item>
	    <item >gray</item>
	    <item >green</item>
	</string-array>
	<string-array name="image_type_array">
		<item >faces</item>
	    <item >photo</item>
		<item >clip art</item>
		<item >line art</item>	
	</string-array>
	<string name="save">save</string>
</resources>
